--- a/bathroom.html
+++ b/bathroom.html
@@ -155,7 +155,7 @@
 
 
                         <li class="list-inline-item"><a href="Lavish-Showroom-Ardmore-PA-v1.html">Location &amp; Hours</a></li>
-                        <li class="list-inline-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
+                        <li class="list-inline-item"><a href="index.html#schedule-appointment">SCHEDULE APPOINTMENT</a></li>
                     </ul>
 
 
@@ -558,7 +558,7 @@
                         <li><a href="about-us.html">About</a></li>
                         <li><a href="brands.html">Brands</a></li>
                         <li><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
-                        <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
                         <li><!--<a href="#" target="_blank">Need More Plumbing Items</a>--></li>
                         <li><a href="index.html#inquiry">Help Center</a></li>
                         <li><a href="terms-conditions.html">Terms & Conditions</a></li>
