--- a/blog.html
+++ b/blog.html
@@ -154,8 +154,9 @@
 
 
 
+
                         <li class="list-inline-item"><a href="Lavish-Showroom-Ardmore-PA-v1.html">Location &amp; Hours</a></li>
-                        <li class="list-inline-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
+                        <li class="list-inline-item"><a href="#schedule-appointment">SCHEDULE APPOINTMENT</a></li>
                     </ul>
 
 
