--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -155,7 +155,7 @@
 
 
                         <li class="list-inline-item"><a href="Lavish-Showroom-Ardmore-PA-v1.html">Location &amp; Hours</a></li>
-                        <li class="list-inline-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
+                        <li class="list-inline-item"><a href="index.html#schedule-appointment">SCHEDULE APPOINTMENT</a></li>
                     </ul>
 
 
