--- a/about-us.html
+++ b/about-us.html
@@ -156,7 +156,7 @@
 
 
                         <li class="list-inline-item"><a href="Lavish-Showroom-Ardmore-PA-v1.html">Location &amp; Hours</a></li>
-                        <li class="list-inline-item"><a href="index.html#schedule-appointment">SCHEDULE APPOINTMENT</a></li>
+                        <li class="list-inline-item"><a href="index.html#schedule-appointment">Schedule Appointment</a></li>
                     </ul>
 
 
@@ -455,7 +455,7 @@
                 </ul>
                 <div class="w-100 d-lg-none d-xl-none"></div>
                 <ul class="list-inline list-pipe m-0">
-                    <li class="list-inline-item">Site Powered By <a href="#" target="_blank">E-lavish bath and kitchen showroom</a>.</li>
+                    <li class="list-inline-item">Site Powered By <a href="#" target="_blank">E-lavish Bath and Kitchen Showroom</a>.</li>
                     <!--<li class="list-inline-item">
 
                         <a class="d-print-none" href="#">Login</a>
