--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 
                         <li class="list-inline-item"><a href="Lavish-Showroom-Ardmore-PA-v1.html">Location &amp; Hours</a></li>
-                        <li class="list-inline-item"><a href="index.html#schedule-appointment">SCHEDULE APPOINTMENT</a></li>
+                        <li class="list-inline-item"><a href="index.html#schedule-appointment">Schedule Appointment</a></li>
                     </ul>
 
 
@@ -419,7 +419,7 @@
 
 
                                     <div class="mt-auto">
-                                        <a class="btn btn-primary mt-auto" href="Lavish-Showroom-Ardmore-PA-v1.html">CLICK HERE</a>
+                                        <a class="btn btn-primary mt-auto" href="Lavish-Showroom-Ardmore-PA-v1.html">Click Here</a>
                                     </div>
                                     <div class="mt-auto">
                                         <a class="btn btn-primary mt-auto" href="#schedule-appointment">Scheduled an Appointment</a>
@@ -1248,7 +1248,7 @@
                 </ul>
                 <div class="w-100 d-lg-none d-xl-none"></div>
                 <ul class="list-inline list-pipe m-0">
-                    <li class="list-inline-item">Site Powered By <a href="#" target="_blank">E-lavish bath and kitchen showroom</a>.</li>
+                    <li class="list-inline-item">Site Powered By <a href="#" target="_blank">E-lavish Bath and Kitchen Showroom</a>.</li>
                     <!--<li class="list-inline-item">
 
                         <a class="d-print-none" href="#">Login</a>
