--- a/Lavish-Showroom-Ardmore-PA-v1.html
+++ b/Lavish-Showroom-Ardmore-PA-v1.html
@@ -154,7 +154,7 @@
 
 
                         <li class="list-inline-item"><a href="Lavish-Showroom-Ardmore-PA-v1.html">Location &amp; Hours</a></li>
-                        <li class="list-inline-item"><a href="index.html#schedule-appointment">Schedule Appointment</a></li>
+                        <li class="list-inline-item"><a href="index.html#inquiry">Schedule Appointment</a></li>
                     </ul>
 
 
@@ -386,7 +386,7 @@
 
         <div class="embed-responsive embed-responsive-16by9" id="googlemap"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3056.0125929889255!2d-75.29921458461648!3d40.00816627941475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c07d192a7a65%3A0x6ecc22dfdcac7cf5!2s51%20Greenfield%20Ave%2C%20Ardmore%2C%20PA%2019003!5e0!3m2!1sen!2sus!4v1583267924553!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
 
-        <div class="row m-3">
+        <div class="row m-3" id="hours">
             <div class="col-md-6  col-lg-6  col-xl-4">
                 <div class="location-detail-arrow"></div>
                 <div class="card location-detail text-white bg-primary mb-3 p-4">
