--- a/blog.html
+++ b/blog.html
@@ -156,7 +156,7 @@
 
 
                         <li class="list-inline-item"><a href="Lavish-Showroom-Ardmore-PA-v1.html">Location &amp; Hours</a></li>
-                        <li class="list-inline-item"><a href="index.html#schedule-appointment">Schedule Appointment</a></li>
+                        <li class="list-inline-item"><a href="index.html#inquiry">Schedule Appointment</a></li>
                     </ul>
 
 
