--- a/about-us.html
+++ b/about-us.html
@@ -438,7 +438,7 @@
                         <source src="assets/LavishVideo-422.mp4" type="video/mp4">
 
                     </video>-->
-                    <video width="400" controls autoplay>
+                    <video width="400" style="width:100%" controls autoplay>
                         <source src="assets/LavishVideo-422.mp4" type="video/mp4">
 
                     </video>
