--- a/index.html
+++ b/index.html
@@ -673,13 +673,13 @@
                 <div class="card m-2 p-4 text-center border">
                     <!-- Card icon -->
                     <!--Card content-->
-                    <div class="card-body d-flex">
-                        <div class="ml-auto mr-auto">
+                    <div class="card-body d-flex row">
+                        <div class="ml-auto mr-auto col-md-6">
 
                             <img src="./assets/LavishFront.JPG" class="img-fluid" alt="Showroom Outside">
                         </div>
-                        <div class="d-flex align-items-center">
-                            <div class=" ">
+                        <div class="d-flex  col-md-6 align-items-center justify-content-center">
+                            <div class="">
                                 <h4 class="card-title">Welcome to Lavish</h4>
 
                                 <p class="card-text mb-2">Check out our bath &amp; kitchen showroom featuring thousands of items.<br /> Located on the mainline in Ardmore, PA. <a href="Lavish-Showroom-Ardmore-PA-v1.html#hours" style="color:blue;">Click here for hours</a><br /></p>
