--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
         <!-- /.container -->
     </section>
 
-    <footer class="p-4">
+   <footer class="p-4">
         <div class="container d-print-none">
             <div class="row mb-5">
                 <div class="col mb-2">
@@ -1142,15 +1142,15 @@
                         <li><strong>CUSTOMER SERVICE</strong></li>
                         <li><a href="about-us.html">About</a></li>
                         <li><a href="brands.html">Brands</a></li>
-                        <li><a href="#">Contact A Lavish Specialist</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <!--<li><a href="#" target="_blank">Need More Plumbing Items</a></li>-->
+                        <li><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><!--<a href="#" target="_blank">Need More Plumbing Items</a>--></li>
                         <li><a href="index.html#inquiry">Help Center</a></li>
-                        <li><a href="#">Site Map</a></li>
+                        <li><a href="terms-conditions.html">Terms & Conditions</a></li>
                     </ul>
                     <ul class="mt-4">
                         <li><strong>CONNECT</strong></li>
-                        <li><a href="#" target="_blank" title="follow us on facebook"><span class="fab fa-facebook fa-2x" aria-hidden="true"></span></a>&nbsp;&nbsp;<a href="#" target="_blank" title="follow us on instagram"><span class="fab fa-instagram fa-2x" aria-hidden="true"></span></a></li>
+                        <li><a href="https://www.facebook.com/lavishardmore/" target="_blank" title="follow us on facebook"><span class="fab fa-facebook fa-2x" aria-hidden="true"></span></a>&nbsp;&nbsp;<a href="https://www.instagram.com/lavishardmore/" target="_blank" title="follow us on instagram"><span class="fab fa-instagram fa-2x" aria-hidden="true"></span></a></li>
 
                     </ul>
                 </div>
@@ -1167,13 +1167,13 @@
                         </li>
                         <li>Monday:&nbsp;Closed</li>
 
-                        <li>Tuesday:&nbsp;8:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
+                        <li>Tuesday:&nbsp;9:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
 
-                        <li>Wednesday:&nbsp;8:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
+                        <li>Wednesday:&nbsp;9:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
 
-                        <li>Thursday:&nbsp;8:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
+                        <li>Thursday:&nbsp;9:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
 
-                        <li>Friday:&nbsp;8:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
+                        <li>Friday:&nbsp;9:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
 
                         <li>Saturday:&nbsp;9:00 AM&nbsp;-&nbsp;2:00&nbsp;PM&nbsp;EST</li>
 
@@ -1205,7 +1205,7 @@
                 </ul>
                 <div class="w-100 d-lg-none d-xl-none"></div>
                 <ul class="list-inline list-pipe m-0">
-                    <li class="list-inline-item">Site Powered By <a href="#" target="_blank">E-lavish bath and kitchen showroom</a>.</li>
+                    <li class="list-inline-item">Site Powered By <a href="#" target="_blank">E-lavish Bath and Kitchen Showroom</a>.</li>
                     <!--<li class="list-inline-item">
 
                         <a class="d-print-none" href="#">Login</a>
